// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListView renders correctly 1`] = `
<View
  style={Object {}}
>
  <Text
    id="render-row-0"
  >
    Jack
  </Text>
  <Text
    id="render-row-1"
  >
    Russel
  </Text>
</View>
`;

exports[`ListView should render empty view when doesn't exist dataSource: <View/> 1`] = `
<View
  style={Object {}}
/>
`;

exports[`ListView should render properly with dataSource and renderRow 1`] = `
<View
  style={Object {}}
>
  <View>
    <Text>
      Pug
      , which age is 
      5
    </Text>
  </View>
  <View>
    <Text>
      Golden Retriever
      , which age is 
      8
    </Text>
  </View>
</View>
`;
